--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node ./examples/server/node/server.js",
     "test": "karma start",
     "build": "npm run clean && tsc && rollup -c && uglifyjs dist/satellizer.js -o dist/satellizer.min.js",
-    "clean": "rimraf build dist coverage"
+    "clean": "rimraf build dist"
   },
   "author": {
     "name": "Sahat Yalkabov",
@@ -24,9 +24,12 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "angular-mocks": "^1.5.7",
     "babel-core": "^6.9.1",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-rollup": "^1.1.1",
     "babelify": "^7.2.0",
     "babelify-external-helpers": "^1.1.0",
@@ -44,16 +47,23 @@
     "gulp-rename": "^1.2.2",
     "gulp-typescript": "^2.12.1",
     "gulp-uglify": "~1.5.2",
+    "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
+    "karma-webpack": "^1.7.0",
     "karma-coverage": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.0",
+    "karma-source-map-support": "^1.1.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-typescript-preprocessor": "^0.2.1",
+    "phantomjs-prebuilt": "^2.1.7",
     "rollup": "^0.34.1",
     "rollup-plugin-babel": "^2.4.0",
     "rollup-plugin-node-resolve": "^1.7.1",
     "rollup-plugin-typescript": "^0.7.6",
     "rollup-plugin-uglify": "^1.0.1",
     "ts-loader": "^0.8.2",
+    "ts-node": "^0.9.3",
     "tslint-loader": "^2.1.4",
     "typescript": "^1.8.10",
     "uglify-js": "^2.7.0",
