--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node ./examples/server/node/server.js",
     "test": "karma start",
     "build": "npm run clean && tsc && rollup -c && uglifyjs dist/satellizer.js -o dist/satellizer.min.js",
-    "clean": "rimraf build dist"
+    "clean": "rimraf build dist",
+    "copy": "cp dist/satellizer.js examples/client/vendor && cp -R examples/client/ examples/server/php/public/"
   },
   "author": {
     "name": "Sahat Yalkabov",
@@ -31,31 +32,14 @@
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-rollup": "^1.1.1",
-    "babelify": "^7.2.0",
-    "babelify-external-helpers": "^1.1.0",
-    "browserify": "^13.0.0",
-    "eslint": "^2.9.0",
-    "eslint-config-airbnb": "^8.0.0",
-    "eslint-plugin-babel": "^3.2.0",
-    "eslint-plugin-import": "^1.8.0",
-    "eslint-plugin-jsx-a11y": "^1.2.2",
-    "eslint-plugin-react": "^5.0.1",
-    "gulp": "^3.9.1",
-    "gulp-complexity": "~0.3.2",
-    "gulp-header": "~1.8.2",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-typescript": "^2.12.1",
-    "gulp-uglify": "~1.5.2",
-    "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
-    "karma-webpack": "^1.7.0",
     "karma-coverage": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-source-map-support": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-typescript-preprocessor": "^0.2.1",
+    "karma-webpack": "^1.7.0",
     "phantomjs-prebuilt": "^2.1.7",
     "rollup": "^0.34.1",
     "rollup-plugin-babel": "^2.4.0",
@@ -67,9 +51,6 @@
     "tslint-loader": "^2.1.4",
     "typescript": "^1.8.10",
     "uglify-js": "^2.7.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0",
     "webpack": "^1.13.1"
   },
   "tags": [
