--- a/package.json
+++ b/package.json
@@ -24,6 +24,19 @@
     "url": "https://github.com/sahat/satellizer/issues"
   },
   "license": "MIT",
+  "dependencies": {
+    "async": "^1.5.2",
+    "bcryptjs": "^2.3.0",
+    "body-parser": "^1.15.0",
+    "colors": "^1.1.2",
+    "cors": "^2.7.1",
+    "express": "^4.13.4",
+    "jwt-simple": "^0.4.1",
+    "moment": "^2.12.0",
+    "mongoose": "^4.4.6",
+    "morgan": "^1.7.0",
+    "request": "^2.69.0"
+  },
   "devDependencies": {
     "angular-mocks": "^1.5.7",
     "babel-core": "^6.9.1",
