--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@angular/core": "^2.0.0-rc.4",
+    "@angular/http": "^2.0.0-rc.4",
     "angular-mocks": "^1.5.7",
     "babel-core": "^6.9.1",
     "babel-eslint": "^6.0.4",
