--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,6 @@
   "main": "dist/satellizer.js",
   "homepage": "https://github.com/sahat/satellizer",
   "dependencies": {
-    "angular": "1.3.x - 1.5.x"
+    "angular": "1.3.0 - 1.5.x"
   }
 }
