--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "test": "karma start",
     "build": "npm run clean && tsc && rollup -c && uglifyjs dist/satellizer.js -o dist/satellizer.min.js && npm run copy",
     "clean": "rimraf build dist",
-    "copy": "cp dist/satellizer.js examples/client/vendor && cp -R examples/client/ examples/server/php/public/",
+    "copy": "npm-run-all copy:*",
+    "copy:angular": "cp dist/satellizer.js examples/client/vendor",
+    "copy:ionic": "cp dist/satellizer.js examples/ionic/www/lib",
+    "copy:php": "cp -R examples/client/ examples/server/php/public/",
     "bump": "npm version patch",
     "postversion": "npm test && npm run build && git add -A dist && git commit -m 'Release'"
   },
