--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "copy:ionic": "cp -R dist examples/ionic/www/lib/satellizer",
     "copy:php": "cp -R examples/client/ examples/server/php/public/",
     "bump": "npm version patch",
-    "postversion": "npm test && npm run build && git add -A dist && git commit -m 'Release'"
+    "postversion": "npm test && npm run build && git add -A dist && git commit -m 'Release'",
+    "publish-please": "publish-please",
+    "prepublish": "publish-please guard"
   },
   "author": {
     "name": "Sahat Yalkabov",
@@ -48,6 +50,7 @@
     "karma-webpack": "^1.7.0",
     "npm-run-all": "^2.3.0",
     "phantomjs-prebuilt": "^2.1.7",
+    "publish-please": "^2.2.0",
     "rollup": "^0.34.1",
     "rollup-plugin-babel": "^2.4.0",
     "rollup-plugin-node-resolve": "^2.0.0",
